# agent-redteam

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  evaluate.py  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
rag/: indexer.py  retriever.py
rag/data/: attacks.json  papers.json
server/: main.py
server/tools/: defense_analyzer.py  prompt_gen.py  rag_search.py  strategy.py
skill/: agent-redteam.md
tests/: test_defense_analyzer.py  test_prompt_gen.py  test_rag.py  test_server.py
